chore: html returning reports should be returned as a byte array instead of a string (#16)
Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>